--- a/Client/package.json
+++ b/Client/package.json
@@ -7,6 +7,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
+    "react-stripe-elements": "^3.0.0",
     "reactstrap": "^8.0.0"
   },
   "scripts": {
