Refactored most of John's requirements for the backend

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,13 @@
+#Pricing Levels Configuration
 adult.price=10
 child.price=6
 concessions.price=7
+
+#Stripe Configuration
 stripeKey=sk_test_CFjdpvxKll1RAw8MUpz7wRMo00cvMNuhfB
+
+#Email Configuration
+email.address=QACinema12345@gmail.com
+email.password=QACinema12345!#
+smtp.server=smtp.gmail.com
+smtp.port=587
