--- a/pom.xml
+++ b/pom.xml
@@ -74,9 +74,15 @@
 		</dependency>
 		
 		<dependency>
-		  <groupId>com.stripe</groupId>
-		  <artifactId>stripe-java</artifactId>
-		  <version>10.0.2</version>
+			<groupId>com.stripe</groupId>
+			<artifactId>stripe-java</artifactId>
+			<version>10.0.2</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.mockito</groupId>
+		    <artifactId>mockito-core</artifactId>
+		    <version>2.21.0</version>
 		</dependency>
 		
 	</dependencies>
