--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,11 @@
 		    <version>2.21.0</version>
 		</dependency>
 		
+		<dependency>
+			<groupId>cglib</groupId>
+			<artifactId>cglib</artifactId>
+			<version>2.2.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
