Added event and screen class, and database functionality. Added popular movies configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,8 @@ email.address=QACinema12345@gmail.com
 email.password=QACinema12345!#
 smtp.server=smtp.gmail.com
 smtp.port=587
+
+#Carousel Configuration
+movie.one=Dark Phoenix
+movie.two=John Wick Parabellum
+movie.three=Avengers: End Game
