--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,10 @@
 			<artifactId>cglib</artifactId>
 			<version>2.2.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-java</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
