--- a/Client/package.json
+++ b/Client/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-stripe-elements": "^3.0.0",
+    "react-ui-cards": "^1.5.2",
     "reactstrap": "^8.0.0",
     "redux": "^4.0.1"
   },
