checking up to date

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,4 +19,4 @@ movie.three=Avengers: End Game
 
 #Seatsio Configuration
 2D.screen=48efafa5-d8a0-1fad-838a-fb741d9c8bfc
-SeatsIo.Key=
+SeatsIo.Key=b5e23bd2-1e5c-416d-a772-966cb33065fb
