--- a/Client/package.json
+++ b/Client/package.json
@@ -15,6 +15,8 @@
     "react": "^16.8.6",
     "react-datetime": "^2.16.3",
     "react-dom": "^16.8.6",
+    "react-google-login": "^5.0.4",
+    "react-native-fbsdk": "^0.8.0",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
