Implementing small homepage carousels for new releases

--- a/Client/package.json
+++ b/Client/package.json
@@ -11,8 +11,10 @@
     "@seatsio/seatsio-react": "^6.0.0",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "carousel": "0.0.3",
     "cross-env": "^5.2.0",
     "materialize-css": "^1.0.0-rc.2",
+    "nuka-carousel": "^4.5.8",
     "react": "^16.8.6",
     "react-datetime": "^2.16.3",
     "react-dom": "^16.8.6",
