--- a/admin-frontend/package.json
+++ b/admin-frontend/package.json
@@ -14,7 +14,9 @@
     "cross-env": "^5.2.0",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^16.8.6",
+    "react-bootstrap-datetimepicker": "0.0.22",
     "react-datetime": "^2.16.3",
+    "react-datetime-picker": "^2.4.0",
     "react-dom": "^16.8.6",
     "react-materialize": "^3.3.1",
     "react-redux": "^7.1.0",
