--- a/Client/package.json
+++ b/Client/package.json
@@ -22,10 +22,12 @@
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "react-slick": "^0.24.0",
     "react-stripe-elements": "^3.0.0",
     "react-ui-cards": "^1.5.2",
     "reactstrap": "^8.0.0",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "cross-env PORT=3000 react-scripts start",
