--- a/admin-frontend/package.json
+++ b/admin-frontend/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^4.3.1",
     "cross-env": "^5.2.0",
     "materialize-css": "^1.0.0-rc.2",
+    "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-bootstrap-datetimepicker": "0.0.22",
     "react-datetime": "^2.16.3",
