--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,9 @@
 	<description>Demo project for Spring Boot</description>
 	
 	<properties>
-		<java.version>1.9</java.version>
+		<java.version>11</java.version>
+		<maven.compiler.source>${java.version}</maven.compiler.source>
+		<maven.compiler.target>${java.version}</maven.compiler.target>
 	</properties>
 
 	<dependencies>
