--- a/pom.xml
+++ b/pom.xml
@@ -121,7 +121,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.0</version>
+				<version>3.8.0</version><!--$NO-MVN-MAN-VER$-->
 				<configuration>
 					<release>11</release>
 				</configuration>
@@ -129,7 +129,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.0</version>
+				<version>2.22.0</version><!--$NO-MVN-MAN-VER$-->
 				<configuration>
 					<argLine>
 						--illegal-access=permit
@@ -139,7 +139,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-failsafe-plugin</artifactId>
-				<version>2.22.0</version>
+				<version>2.22.0</version><!--$NO-MVN-MAN-VER$-->
 				<configuration>
 					<argLine>
 						--illegal-access=permit
