--- a/Client/package.json
+++ b/Client/package.json
@@ -14,12 +14,14 @@
     "carousel": "0.0.3",
     "cross-env": "^5.2.0",
     "materialize-css": "^1.0.0-rc.2",
+    "moment": "^2.24.0",
     "nuka-carousel": "^4.5.8",
     "react": "^16.8.6",
     "react-datetime": "^2.16.3",
     "react-dom": "^16.8.6",
     "react-google-login": "^5.0.4",
     "react-materialize": "^3.3.1",
+    "react-moment": "^0.9.2",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
