--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,10 @@
 	<artifactId>CinemaProject</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>CinemaProject</name>
+	<prerequisites>
+		<maven>3.0</maven>
+	</prerequisites>
+
 	<repositories>
 		<repository>
 			<id>jitpack.io</id>
@@ -20,9 +24,11 @@
 		</repository>
 	</repositories>
 	<description>Demo project for Spring Boot</description>
-	
+
 	<properties>
-		<java.version>1.9</java.version>
+		<java.version>9</java.version>
+		<maven.compiler.source>${java.version}</maven.compiler.source>
+		<maven.compiler.target>${java.version}</maven.compiler.target>
 	</properties>
 
 	<dependencies>
@@ -96,7 +102,8 @@
 		<dependency>
 			<groupId>cz.jirutka.spring</groupId>
 			<artifactId>embedmongo-spring</artifactId>
-			<version>RELEASE</version>
+			<version>1.3.1</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -107,6 +114,21 @@
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.xml.bind</groupId>
+			<artifactId>jaxb-core</artifactId>
+			<version>2.2.11</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.xml.bind</groupId>
+			<artifactId>jaxb-impl</artifactId>
+			<version>2.2.11</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.activation</groupId>
+			<artifactId>activation</artifactId>
+			<version>1.1.1</version>
 		</dependency>
 
 	</dependencies>
@@ -119,11 +141,9 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<release>11</release>
-				</configuration>
+				<version>3.8.0</version>
 			</plugin>
+
 		</plugins>
 	</build>
-
 </project>
