--- a/Client/package.json
+++ b/Client/package.json
@@ -13,7 +13,7 @@
     "bootstrap": "^4.3.1",
     "carousel": "0.0.3",
     "cross-env": "^5.2.0",
-    "materialize-css": "^1.0.0-rc.2",
+    "materialize-css": "^1.0.0",
     "nuka-carousel": "^4.5.8",
     "react": "^16.8.6",
     "react-datetime": "^2.16.3",
