changed application.properties admin credentials

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,5 +22,5 @@ movie.three=Avengers: End Game
 SeatsIo.Key=b5e23bd2-1e5c-416d-a772-966cb33065fb
 
 #Admin Configuration
-user.name=admin
+qacinema.username=admin
 pass.word=admin
