--- a/pom.xml
+++ b/pom.xml
@@ -141,12 +141,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.0</version>
-			</plugin>
-				<version>3.8.0</version><!--$NO-MVN-MAN-VER$-->
-				<configuration>
-					<release>11</release>
-				</configuration>
+				<!-- <version>3.8.0</version> -->
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
